--- a/test/css/main.css
+++ b/test/css/main.css
@@ -1,10 +1,42 @@
 @charset "utf-8";
 
 
-html,div, video {margin:0;padding:0;}
-body {padding:0px, 0px, 0px, 0px; margin:0px, 0px, 0px, 0px; overflow:hidden; background-color:#000; } .container {}
-
-body {
-    height: 4000px;
+html, body {
+    width: 100%;
+    height: 3000px;
+    background : url(../images/bg1.png) no-repeat fixed center/cover;
+    margin: 0;
+    padding: 0;
+    
 }
 
+.ham{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    width: 50px;
+    height: 50px;
+    font-size: 40px;
+
+    border: none;
+    background-color: transparent;
+
+    cursor: pointer;/* 손가락모양 */
+}
+
+        /* GNB메뉴 */
+        .gnb{
+            position: fixed;
+            top: -100%;/* 화면만큼 위로 올라감! */
+            left: 0;
+            /* 보이는 화면기준!!! */
+            width: 100%;
+            height: 100%;
+            background-color: #76BAFF;
+                        /* 트랜지션: 속시이지 */
+                        transition: top 1.2s ease-in-out;
+                    }
+
+
+                    
