--- a/test/css/main.css
+++ b/test/css/main.css
@@ -1,16 +1,17 @@
 @charset "utf-8";
 
 
-html, body {
+html,
+body {
     width: 100%;
     height: 1800px;
-    background : url(../images/bg1.png) no-repeat fixed center/cover;
+    background: url(../images/bg2.jpeg) no-repeat fixed center/cover;
     margin: 0;
     padding: 0;
-    
+
 }
 
-.ham{
+.ham {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -18,25 +19,108 @@ html, body {
     width: 50px;
     height: 50px;
     font-size: 40px;
+    color: rgb(0, 0, 0);
 
     border: none;
     background-color: transparent;
 
-    cursor: pointer;/* 손가락모양 */
+    cursor: pointer;
+    /* 손가락모양 */
 }
 
-        /* GNB메뉴 */
-        .gnb{
-            position: fixed;
-            top: -100%;/* 화면만큼 위로 올라감! */
-            left: 0;
-            /* 보이는 화면기준!!! */
-            width: 100%;
-            height: 100%;
-            background-color: #76BAFF;
-                        /* 트랜지션: 속시이지 */
-                        transition: top 1.2s ease-in-out;
-                    }
+.gnb img {
+    position: relative;
+    /* 부모자격 */
+    width: 400px;
+    height: 500px;
+    margin: 0;
+    /* 위치 중간으로 */
+    padding: 0;
+    margin-left: 500px;
+    margin-top: 100px;
+}
 
 
-                    
+
+/* GNB메뉴 */
+.gnb {
+    position: fixed;
+    top: -100%;
+    /* 화면만큼 위로 올라감! */
+    left: 0;
+    /* 보이는 화면기준!!! */
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    /* 트랜지션: 속시이지 */
+    transition: top 1.2s ease-in-out;
+}
+
+
+
+#ct {
+    position: relative;
+    top: 100px;
+    margin: 0 auto;
+    /* 나의 부모는? */
+    width: 400px;
+    height: 500px;
+    background: url(../images/map.png) no-repeat 0/100% 100%;
+}
+
+#sl {
+    position: absolute;
+    top: 180px;
+    left: 80px;
+    /* 나의 부모는? */
+    width: 90px;
+    height: 30px;
+    background: url(../images/seoul1.png) no-repeat 0/100% 100%;
+}
+
+#sl img {
+    display: none;
+    position: absolute;
+    margin: 0 auto;
+    right: 100px;
+    bottom: -200px;
+    width: 380px;
+    height: 485px;
+
+
+}
+
+
+
+#ct:hover #sl img:first-child {
+    display: inline;
+}
+
+
+
+/* 서산 이름 위치 */
+#ss {
+    position: absolute;
+    left: 80px;
+    top: 250px;
+    width: 90px;
+    height: 30px;
+    background: url(../images/seosan1.png) no-repeat 0/100% 100%;
+
+}
+
+#ss img {
+    display: none;
+    position: absolute;
+    margin: 0 auto;
+    right: 100px;
+    bottom: -200px;
+    width: 380px;
+    height: 485px;
+}
+
+
+
+#ct:hover #ss img:first-child {
+    display: inline;
+}
