--- a/test/css/main.css
+++ b/test/css/main.css
@@ -62,6 +62,7 @@ body {
     position: relative;
     top: 100px;
     margin: 0 auto;
+
     width: 550px;
     height: 700px;
     background: url(../images/map.png) no-repeat 0/100% 100%;
@@ -119,6 +120,6 @@ body {
 
 
 
-/* #ct:hover #ss img:first-child {
+#ct:hover #ss img:first-child {
     display: inline;
-} */
+}
