--- a/도깨비응용/css/main.css
+++ b/도깨비응용/css/main.css
@@ -20,7 +20,7 @@ body {
 }
 body{
     background: 
-    url(../images/logo.png) no-repeat  5% -5%/10%,
+    /* url(../images/logo.png) no-repeat  5% -5%/10%, */
     url(../images/bg2.jpeg) no-repeat fixed center/cover;
 }
 
@@ -41,6 +41,13 @@ body{
     /* 스크롤바 트렉 */
     background-color: #ddd;
     border-radius: 5px;
+}
+
+img.logo{    
+    float: left;
+    width: 200px;
+    margin-top: -25px;
+    margin-left: 55px;
 }
 
 
@@ -68,7 +75,7 @@ h3 {
 }
 
 .gnb>ul>li{
-    padding: 50px 35px;
+    padding: 70px 35px;
     /* 양쪽을 동일하게 밀고 사이간격은 34px */
 }
 
@@ -81,7 +88,7 @@ h3 {
     color: rgb(255, 255, 255);
     text-decoration: none;
     font-size: 13px;
-    line-height: 60px;
+    line-height: 64px;
     box-sizing: border-box;/* 보더,패딩 내부로 포함 */
 }
 
@@ -98,14 +105,17 @@ h3 {
 
 /* 2. 메인영역 */
 .cont{
-    min-height: 1000px;
+    min-height: 800px;
+    margin-right: -50px;
+    margin-left: -50px;
+    
     
 }
 
 /* 캐릭터 박스 */
 #cbx {
     position: relative;
-    top: 360px;/* 원래위치에서 아래로 400px이동 */
+    top: 170px;/* 원래위치에서 아래로 400px이동 */
     width: 90%;
     /* height: 300px; 
         자식요소 float때문에
@@ -156,7 +166,7 @@ h3 {
 /* 캐릭터 이미지 */
 .ci>img {
     /* 직계자식 이미지만! */
-    width: 90%;
+    width: 95%;
     height: 250px;
     /* 이미지의 height는 자동(비율유지) */
 }
@@ -174,7 +184,7 @@ h3 {
 
 /* 캐릭터 이름 이미지 */
 .ci span img {
-    width: 40%;
+    width: 50%;
 }
 
 /* 캐릭터 이름 첫번째 이미지 숨기기 */
@@ -200,7 +210,7 @@ h3 {
     */
     background-color: #fff;
 
-    width: 90%;
+    width: 95%;
 
     
     transition: height .6s ease-out;
@@ -208,7 +218,7 @@ h3 {
 
 /* 캐릭터개별박스(.cat)에 마우스 오버시 .cd높이값 변경 */
 .cat:hover .cd {
-    height: 200px;
+    height: 300px;
 }
 
 /* 캐릭터설명 타이틀 */
@@ -259,8 +269,9 @@ ul.bm::after {
 
 ul.bm li {
     float: left;
-    padding: 0 5px;
+    padding: 0 24px;
     text-align: left;
+    
 }
 
 ul.bm a {
