--- a/CGV응용/CSS/main.css
+++ b/CGV응용/CSS/main.css
@@ -1,14 +1,302 @@
 @charset "utf-8";
+/* CGV PJ 메인 CSS - main.css */
 
+/* 외부CSS파일 합치기(머징:merging) */
+@import url(reset.css);
+@import url(core.css);
+
+/* 외부파일 합치는 @import는 하나의 CSS외부파일
+에서 다른 외부CSS파일을 하나의 문서로 합치는 기능을
+한다. html에서 link방식의 요청을 최소화 할 수 있어서
+랜더링 효율성을 높여준다! */
 
 body {
-  background-color: teal;
+    background: url(../images/blp.png) no-repeat;
+    background-position: top right;
+    background-color: #1e3f27;
+    
+    
+    
+}
+
+/* 레이아웃 공통 클래스 */
+.part {
+    width: 1200px;
+    margin: 0 auto;
+    /* 가로중앙 */
+    /* outline: 3px dotted yellow; */
+}
+
+/************** 1. 상단영역 *******************/
+#top {
+    position: relative;
+    /* 부모자격! - .gnb */
+    height: 80px;
+    
+    z-index: 999;
+}
+
+
+
+/* 1-2. 전체메뉴(GNB) */
+.gnb {
+    position: absolute;
+    bottom: -22px;
+    right: 347px;
+    /* 나의부모는? #top */
+}
+
+/* GNB ul 리스트 박스 */
+.glist{
+    position: relative;
+    z-index: 1;
+    /* 다음형제 요소인 #cam 앱솔박스보다 위!
+    -> 마우스 오버가 안되니까~~! */
+}
+
+/* GNB li리스트 */
+.gnb li {
+    position: relative;
+    /* 부모자격 - .smenu */
+    padding: 0 10px;
+    padding-bottom: 5px;
+    /* 하위메뉴 마진탑부분과 겹치게함! */
+  
+    /* 글자크기 미지정시 16px임! */
+    font-size: 20px;
+}
+
+/* GNB 서브메뉴 */
+.smenu {
+    position: absolute;
+    /* left와 transform을 이용한 가로 중앙정렬법! */
+    left: 50%;
+    /* 부모가로크기의 절반만큼 밀어준다! */
+    transform: translateX(-50%);
+    /* 자기자신크기의 절반을 왼쪽으로 이동! */
+    margin-top: 5px;
+    /* 상단밀기 위치조정 */
+
+    width: 150px;
+    /* 특정크기를 주지 않고 auto일 경우 부모크기로 한정됨!
+    따라서 특정크기를 줘야하는 케이스임! */
+    
+
+    padding: 3px;
+    /* 패딩 */
+    border-radius: 5px;
+    /* 둥근모서리 */
+    box-shadow: 0 0 5px #fff;
+    /* 박스글로우 : x y blur (spread) 색 */
+
+    display: none;
+    /* 처음에 안보임! */
+}
+
+/* 상위메뉴 오버시 서브메뉴 보이기 */
+.gnb>ul>li:hover .smenu{
+    display: block;
+}
+
+
+.smenu ol {
+    border: 1px solid #ccc;
+    padding: 5px;
+}
+
+.smenu li {
+    float: none;
+    /* float해제 */
+    font-size: 16px;
+    line-height: 2;
+}
+
+/* 서브메뉴 a요소 오버시 */
+.smenu a:hover {
+    color: red;
+}
+
+/* 서브메뉴 a요소 오버시 가상요소로 손가락모양 */
+.smenu a:hover::after {
+    content: '☞';
+    /* 손가락모양 */
+    float: right;
+    /* 인라인요소 오른쪽끝! */
+    font-weight: bold;
+}
+
+/* 탑 보더 클래스 */
+.tbar {
+    border-top: 1px solid #ccc;
+}
+
+
+
+/*************** 2. 메인영역 ****************/
+#cont {
+    position: relative;
+    /* 부모자격 */
+    height: 788px;
+    /* background: url(../images/bg.jpg) no-repeat; */
+}
+
+/* 2-1.스크린박스 */
+#screen {
+    position: absolute;
+    top: 60px;  
+    /* 위치 변경 */
+    left: 0px;
+    /* 나의 부모는? #cont */
+    width: 701px;
+    height: 398px;
+    background-color: #000;
 
 }
 
-#box {
-  width: 200px;
-  height: 150px;
-  border: 10px solid yellow;
+/* 스크린 아이프레임 */
+#screen iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
 
+/* 2-2. 예고편선택메뉴위치 */
+.mlist {
+    position: absolute;
+    bottom: 69px;
+    left: 69px;
+    overflow: hidden;
+    /* 넘치는 자식요소 숨기기
+    -> .movtxt요소의 부모에 줘야 적용된다! */
+}
+
+/* li디자인 */
+.mlist ul>li {
+    margin: 0 10px;
+    /* li 바깥쪽 양쪽밀기 */
+}
+
+/* 포스터 이미지 */
+.mlist img {
+  width: 150px;
+  height: 150px;
+}
+
+/* 영화정보박스 */
+.movtxt {
+    position: absolute;
+    top: 100%;
+    /* 아래쪽에 나가있음! */
+    /* 나의 부모는? .mlist */
+    /* left값은 셋팅하지 않으므로 젠틀하다! 
+    그래서 모두 li안에 그대로 있음! */
+
+    width: 150px;
+    height: 150px;
+    background-color: rgba(0, 0, 0, 0.7);
+
+    /* 글자셋팅 */
+    
+    font-size: 14px;
+    line-height: 25px;
+    color: #fff;
+    text-align: center;
+
+}
+
+.lp {
+  transform-origin: center;
+}
+
+
+.lp:hover {
+  transform: rotate(5423deg);
+  transition-duration: 10s;
+  /* 트렌지션 시간 변경하기 */
+}
+
+/* 영화정보 li */
+.movtxt li {
+    float: none;
+    /* float해제 */
+}
+
+/* 첫번째 li는 영화제목임 */
+/* .movtxt li:first-child {
+    color: aqua;
+    font-size: 17px;
+    letter-spacing: -1px;
+    margin-top: 30px;
+} */
+
+/* 포스터 리스트에 마우스 오버시 영화정보 올라오기 */
+/* .mlist>ul>li:hover .movtxt {
+    top: 0;
+} */
+
+/************** 3. 하단영역 *******************/
+#info {
+    position: relative;
+    /* 부모자격 */
+    height: 100px;
+}
+/* 3-1.회사정보박스 */
+#info address{
+    color: #fff;
+    font-style: normal;/* 이탤릭해제 */
+    font-family: 'Cute Font', cursive;
+    font-size: 18px;
+    line-height: 20px;
+
+    /* 안쪽여백 */
+    padding-top: 20px;
+    padding-left: 20px;
+}
+/* 하단로고 이미지 */
+#info img{
+    float: left;
+    /* 이미지는 왼쪽에 글자는 오른쪽으로 흐르게 */
+    margin-right: 20px;/* 오른쪽여백 */
+}
+
+/* 3-2.sns버튼 */
+.sns{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    /* 부모는? #info */
+}
+/* sns li박스 */
+.sns li{
+    width: 34px;
+    height: 34px;
+    margin: 2px;
+    /* outline: 2px solid lime; */
+    /* 배경이미지 넣기 - 스프라이츠(Sprites) */
+    background: url(../images/sprites_logo.png) no-repeat;
+    /* 흑백처리-오버시칼라(0%) */
+    filter: grayscale(100%);
+}
+/* li오버시 칼라로! */
+.sns li:hover {
+    filter: grayscale(0%);
+}
+/* 페이스북 */
+.sns li:first-child{
+    background-position: -509px -429px;
+}
+/* 트위터 */
+.sns li:nth-child(2){
+    background-position: -551px -429px;
+}
+/* 인스타그램 */
+.sns li:last-child{
+    background-position: -593px -429px;
+}
+
+/* sns a요소 확장  손가락 모양 가능 메뉴페이지는 되도록*/
+.sns a{
+    display: block;
+    width: 100%;
+    height: 100%;
 }
