--- a/CGV응용/CSS/core.css
+++ b/CGV응용/CSS/core.css
@@ -3,7 +3,7 @@
 /* -> 웹폰트, 공용공통클래스  */
 
 /* 웹폰트 */
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@0,200;0,500;0,600;0,700;1,200;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@1,800&display=swap');
 
 
 /* 
