--- a/CGV응용/CSS/intro.css
+++ b/CGV응용/CSS/intro.css
@@ -10,7 +10,7 @@ html,body{
     height: 100%;
     /* 보이는 화면에 높이값 맞춤! */
 }
- 
+
 /* 비디오 */
 #myvid{
     width: 100%;
@@ -73,12 +73,13 @@ body::after{
 /* 박스에 오버시 span변형하기 */
 #enter:hover span {
     transform: scale(2);
-    color: chartreuse;
+    color: #df442f;
 }
 
 
 /* 로고 이미지 */
 #enter img {
+    width: 200px;
     transition: transform .4s ease-out;
     /* 트렌지션 : 속시이지 */
 }
